minor alignment fixes

--- a/src/common/CompanyDifferences.scss
+++ b/src/common/CompanyDifferences.scss
@@ -1,5 +1,5 @@
 .landing-page__diff {
-  margin-top: 3rem;
+  margin-top: 5rem;
   & table th {
     font-family: "Josefin Sans", sans-serif;
   }
