--- a/src/landing-pages/limited-liability-company/LimitedLiabilityContent.scss
+++ b/src/landing-pages/limited-liability-company/LimitedLiabilityContent.scss
@@ -159,4 +159,10 @@
       font-size: 1.6rem;
     }
   }
+  &__faqs {
+    margin-top: 3rem;
+    &-content {
+      margin-top: 3rem;
+    }
+  }
 }
