--- a/src/landing-pages/one-person-company/OnePersonCompanyContent.scss
+++ b/src/landing-pages/one-person-company/OnePersonCompanyContent.scss
@@ -227,4 +227,10 @@
       }
     }
   }
+  &__faqs {
+    margin-top: 3rem;
+    &-content {
+      margin-top: 3rem;
+    }
+  }
 }
