--- a/src/landing-pages/section-eight/SectionEightContent.scss
+++ b/src/landing-pages/section-eight/SectionEightContent.scss
@@ -124,4 +124,11 @@
       font-size: 1.6rem;
     }
   }
+  
+  &__faqs {
+    margin-top: 3rem;
+    &-content {
+      margin-top: 3rem;
+    }
+  }
 }
